# Search

./: LICENSE
diner_search/: .gitignore  .pre-commit-config.yaml  DEPLOYMENT_GUIDE.md  INSTALL_PYTHON312.md  Makefile  README.md  README_HF.md  app.py  pyproject.toml  requirements.txt
diner_search/scripts/: check_python_version.sh  generate_embeddings.py  setup.sh
diner_search/src/: __init__.py  app.py  embedding_loader.py  legacy_code.py  search_engine.py  utils.py
